--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 
-minnow is an early prototype of a no-sql relational database
+minnow is a no-sql relational database in ongoing development, currently in alpha.
